Fix group layout on mobile

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -57,6 +57,15 @@
     }
 }
 
+@media (max-width: $mobile-breakpoint) {
+    .main-layout {
+        .content-container {
+            overflow: auto;
+
+        }
+    }
+}
+
 @media (min-width: $mobile-breakpoint) {
     .main-layout {
 
