--- a/src/assets/styles/cmps/board/task/_task-header-list.scss
+++ b/src/assets/styles/cmps/board/task/_task-header-list.scss
@@ -43,14 +43,18 @@
             position: sticky;
             left: 42px;
             display: flex;
-            min-width: 342px;
-            max-width: 342px;
+            min-width: var(--task-col);
+            max-width: var(--task-col);
 
             .task-title {
                 display: flex;
                 width: 100%;
                 background-color: white;
 
+            }
+
+            .task-selection {
+                max-width: 36.25px;
             }
         }
     }
